...
            .document
        }
    }

    var title: LocalizedStringResource {
        switch self {
        case .newWindow: "New Window"
        case .closeTab: "Close Tab"
        case .newNote: "New Note"
        case .openMarkdown: "Open Markdown…"
        case .save: "Save"
        case .moveToTrash: "Move to Trash…"
        case .pasteMarkdown: "Paste as Markdown"
...
